# axyl-modmail

./: Cargo.toml  readme.md
src/: bot.rs  commands.rs  config.rs
